--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "zustand": "^4.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host localhost" ,
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
